Adjusted font size and image size on homepage css, fixed menu button alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     margin-top: 40px;
     margin-bottom: 40px;
 }
-
+/*FONT-STYLES*/
 /*This is how you change a font in css*/
 h1 {
     font-family:"Righteous";
@@ -29,6 +29,12 @@ h2{
     font-family: "Righteous";
     font-size: 28px;
     color:292647;
+}
+h3{
+    font-family:"Righteous";
+    font-size: 20px;
+    font-weight:400;
+    color:#292647;
 }
 p{
     font-family:"oxygen";
@@ -43,12 +49,12 @@ p{
     background-color: #292647;
     color:#d9daff;
     font-family: "Righteous";
-    font-size:20px;
+    font-size:24px;
     border:none;
     cursor:pointer;
     padding:8px 24px;
-    border-radius: 15px;
-    margin-top: 10px;
+    border-radius: 20px;
+    margin-top: 30px;
     margin-bottom: 5px;
     display: flex;
 }
@@ -64,7 +70,10 @@ p{
     cursor:pointer;
     padding:8px 24px;
     border-radius:15px;
+
 }
+
+
 
 /*HOMEPAGE MENU LAYOUT SECTION*/
 .homepage-menu {
@@ -72,15 +81,28 @@ p{
     justify-content:space-evenly;
     align-items: flex-start;
     margin-top: 40px;
-    gap:40px;
+    gap:60px;
 }
+
+/*Fixing flexbox alignment to apply evenly to all images that are different sizes*/
+/*note to self: the map icon was poorly aligned on the page because it was poorly cropped before uploading the image source, that is why flexbox did not work as well*/
+/*the height adjustment on images fixed the issue to line the menu buttons up, and the object-fit contain prevents the images from stretching weirdly*/
 
 .homepage-menu img {
-    width:300px;
-    max-width:400px;
-    height: auto;
+    width:340px;
+    height: 200;
     display:block;
     margin:0 auto 12px;
+    object-fit:contain;
 }
 
 
+/*making each box act as a column*/
+.homepage-menu > div{
+display:flex;
+flex-direction: column;
+align-items:center;
+text-align:center;
+
+
+}
